--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,5 @@
-Welcome to Gutenprint 5.2.0-rc1, a release candidate of Gutenprint
-5.2.  Please read these release notes carefully.
+Welcome to Gutenprint 5.2., the initial release of Gutenprint 5.2.
+Please read these release notes carefully.
 
 Gutenprint is a suite of printer drivers that may be used with most
 common UNIX print spooling systems, including CUPS, lpr, LPRng, or
