Fix release that didn't get bumped.

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-Welcome to Gutenprint 5.2., the initial release of Gutenprint 5.2.
+Welcome to Gutenprint 5.2.1, the initial release of Gutenprint 5.2.
 Please read these release notes carefully.
 
 Gutenprint is a suite of printer drivers that may be used with most
