--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Welcome to Gutenprint 5.2.1!  Please read these notes carefully.
+Welcome to Gutenprint 5.2.2!  Please read these notes carefully.
 
 *** NOTE TO PACKAGERS: Please read the file README.package for issues
     that are of interest to distributors and packagers of Gutenprint.
@@ -8,7 +8,7 @@ Welcome to Gutenprint 5.2.1!  Please read these notes carefully.
 
 I) INTRODUCTION
 
-    This is Gutenprint version 5.2.1, the first release of Gutenprint
+    This is Gutenprint version 5.2.2, a stable release of Gutenprint
     5.2.  Gutenprint, formerly named Gimp-Print, is a suite of printer
     drivers that may be used with most common UNIX print spooling
     systems, including CUPS, lpr, LPRng, or others.  These drivers
@@ -120,7 +120,7 @@ A) OVERVIEW
 	gimp-print-devel@lists.sourceforge.net
 
 	================================================================
-	  Release: gutenprint 5.2.1 generated on 18 Oct 2008
+	  Release: gutenprint 5.2.2 generated on 18 Oct 2008
 
 	  Features:
 	    Build CUPS:                                 yes, installing in /usr
@@ -665,11 +665,11 @@ A) PRINTER INSTALLATION
     you attempt to use a version of Gutenprint with PPD files not
     built for that precise version, the driver will fail with a
     diagnostic error message.  For example, PPD files built for
-    Gutenprint 5.2.0-beta4 will not work with driver version 5.2.1.
-    You can identify printers using Gutenprint PPD files by the name
-    of the PPD file, which will be something like:
+    Gutenprint 5.2.1 will not work with driver version 5.2.2.  You can
+    identify printers using Gutenprint PPD files by the name of the
+    PPD file, which will be something like:
 
-		    EPSON Stylus Photo EX - CUPS+Gutenprint v5.2.1(en)
+		    EPSON Stylus Photo EX - CUPS+Gutenprint v5.2.2(en)
 
     Linux users please note: If you are using CUPS 1.1.11 or higher,
     and you have a USB-connected printer, you must have a printer
