--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Welcome to Gutenprint 5.2.2!  Please read these notes carefully.
+Welcome to Gutenprint 5.2.2.1!  Please read these notes carefully.
 
 *** NOTE TO PACKAGERS: Please read the file README.package for issues
     that are of interest to distributors and packagers of Gutenprint.
@@ -8,18 +8,18 @@ Welcome to Gutenprint 5.2.2!  Please read these notes carefully.
 
 I) INTRODUCTION
 
-    This is Gutenprint version 5.2.2, a stable release of Gutenprint
-    5.2.  Gutenprint, formerly named Gimp-Print, is a suite of printer
-    drivers that may be used with most common UNIX print spooling
-    systems, including CUPS, lpr, LPRng, or others.  These drivers
-    provide high quality printing for UNIX (including Macintosh OS X
-    10.3 and newer) and Linux systems in many cases equal to or better
-    than proprietary vendor-supplied drivers.  Gutenprint also
-    includes an enhanced print plug-in for the GIMP image editor,
-    replacing the Gimp-Print 4.2-based plugin supplied with GIMP 1.2,
-    2.0, and 2.2, and offering an alternative with additional
-    capabilities to the GtkPrint-based plugin supplied with GIMP 2.4
-    and beyond.
+    This is Gutenprint version 5.2.2.1, a prerelease of Gutenprint
+    5.2.3.  Gutenprint, formerly named Gimp-Print, is a suite of
+    printer drivers that may be used with most common UNIX print
+    spooling systems, including CUPS, lpr, LPRng, or others.  These
+    drivers provide high quality printing for UNIX (including
+    Macintosh OS X 10.3 and newer) and Linux systems in many cases
+    equal to or better than proprietary vendor-supplied drivers.
+    Gutenprint also includes an enhanced print plug-in for the GIMP
+    image editor, replacing the Gimp-Print 4.2-based plugin supplied
+    with GIMP 1.2, 2.0, and 2.2, and offering an alternative with
+    additional capabilities to the GtkPrint-based plugin supplied with
+    GIMP 2.4 and beyond.
 
     Gutenprint has been renamed in order to clearly distinguish it
     from GIMP.  While this package started out as the Print plugin for
