--- a/NEWS
+++ b/NEWS
@@ -269,7 +269,9 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
       RX685, RX690, PM-A940, and PM-T960.  Support for these printers
       is still considered experimental.
 
-   6) Printing to the Epson Stylus NX100, NX105, SX100, SX105, TX100,
+   6) Printing to the Epson Stylus S20 and T20 has been corrected.
+
+   7) Printing to the Epson Stylus NX100, NX105, SX100, SX105, TX100,
       TX101, TX102, TX103, TX105, TX106, TX109, ME 300, ME Office 360,
       S20, T20, BX300F, TX300F, and PX-401A has been corrected to the
       specification and will probably function correctly.  However,
